# spasm-ng

./: .gitignore  .main.cpp.swp  .travis.yml  CIncludeDirectoryCollection.h  CMakeLists.txt  CMakePresets.json  CTextStream.cpp  CTextStream.h  CZ80AssemblerTest.cpp  Makefile  Module.h  README.md  SPASM.rc  SPASM.sln  SPASM.vcxproj  SPASM.vcxproj.filters  appveyor.yml  bitmap.cpp  console.cpp  console.h  directive.cpp  directive.h  errors.cpp  errors.h  expand_buf.cpp  export.cpp  hash.cpp  hash.h  hashmap.cpp  list.cpp  main.cpp  md5.h  modp_ascii.cpp  opcodes.cpp  opcodes.h  opcodes_ez80.cpp  parser.cpp  pass_one.cpp  pass_one.h  pass_two.cpp  (+15 more)
.github/workflows/: ci.yml
inc/: arrays.inc  ti83asm.inc  ti83plus.inc  tokens.inc  z80ext.inc
tests/: CMakeLists.txt  dd.asm  empty-macro.asm  eval-neg.asm  jr-ez80-offset.asm  macro-string-argument.asm  name-starts-with-reg.asm  neg-index-offset.asm  space-after-unary.asm  test-runner.py  test_error.asm  undoc-ez80.asm
tests/bugs/: empty-macro-name.asm  extra-long-addinstr.asm  issue-71-paren-eof.asm  non-existent-jmp.asm  pass_one_eol.asm  too-far-relative-jmp.asm
